--- a/MVVMEx/Base.lproj/Main.storyboard
+++ b/MVVMEx/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                         <rect key="frame" x="0.0" y="160.5" width="67" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iYi-ol-Hy2"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -40,6 +43,9 @@
                             <constraint firstItem="u5i-EH-MTF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="aDI-fQ-Acc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="labelLabel" destination="c6S-qU-8hc" id="Ry5-NV-G37"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
